# DBus_CMAKE

./: CMakeLists.txt  build.sh  run.sh
Consumer/: CMakeLists.txt  main.cpp  main.qml
Consumer/Controller/: Controller.cpp  Controller.h
Provider/: CMakeLists.txt  main.cpp  main.qml
Provider/Controller/: Controller.cpp  Controller.h
Proxy/: CMakeLists.txt  HMIAdaptor.cpp  HMIAdaptor.h  HMIInterface.cpp  HMIInterface.h
